5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1635_2447.log
== TEST (2019-04-14 11:50:57) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(mensagem)
else:
	mesnsagem = "Troco de y"
	print(mensagem)
-- OUTPUT:
faltax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:50:59) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(mensagem)
else:
	mesnsagem = "Troco de y"
	print(mensagem)
-- EXECUTION TIME:
0.16822
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
faltax
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:51:00) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(mensagem)
else:
	mesnsagem = "Troco de y"
	print(mensagem)
-- OUTPUT:
faltax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:51:02) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(mensagem)
else:
	mesnsagem = "Troco de y"
	print(mensagem)
-- EXECUTION TIME:
0.16865
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
faltax
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:51:29) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2)
else:
	mesnsagem = "Troco de y"
	print(round(mensagem, 2)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:51:31) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2)
else:
	mesnsagem = "Troco de y"
	print(round(mensagem, 2)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:51:37) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mesnsagem = "Troco de y"
	print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:51:39) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mesnsagem = "Troco de y"
	print(round(mensagem, 2))
-- EXECUTION TIME:
0.143511
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:51:40) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mesnsagem = "Troco de y"
	print(round(mensagem, 2))
-- EXECUTION TIME:
0.129583
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:51:40) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mesnsagem = "Troco de y"
	print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:52:25) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mensagem = "Troco de y"
	print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:52:27) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mensagem = "Troco de y"
	print(round(mensagem, 2))
-- EXECUTION TIME:
0.138755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:52:28) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mensagem = "Troco de y"
	print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:52:29) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mensagem = "Troco de y"
	print(round(mensagem, 2))
-- EXECUTION TIME:
0.176187
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:52:32) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mensagem = "Troco de y"
	print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:52:55) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mensagem = "troco de y"
	print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:52:57) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mensagem = "troco de y"
	print(round(mensagem, 2))
-- EXECUTION TIME:
0.118205
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:52:57) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "faltax"
	print(round(mensagem, 2))
else:
	mensagem = "troco de y"
	print(round(mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:55:30) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta X"
	print(mensagem(round(x, 2)))
else:
	mensagem = "Troco de Y"
	print(mensagem(round(y, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(mensagem(round(x, 2)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:55:32) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta X"
	print(mensagem(round(x, 2)))
else:
	mensagem = "Troco de Y"
	print(mensagem(round(y, 2)))
-- EXECUTION TIME:
0.190331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print(mensagem(round(x, 2)))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:55:37) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta X"
	print(mensagem(round(x, 2)))
else:
	mensagem = "Troco de Y"
	print(mensagem(round(y, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(mensagem(round(x, 2)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:55:42) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta X"
	print(mensagem(round(x, 2)))
else:
	mensagem = "Troco de Y"
	print(mensagem(round(y, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(mensagem(round(x, 2)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:55:43) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta X"
	print(mensagem(round(x, 2)))
else:
	mensagem = "Troco de Y"
	print(mensagem(round(y, 2)))
-- EXECUTION TIME:
0.138552
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print(mensagem(round(x, 2)))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:55:44) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta X"
	print(mensagem(round(x, 2)))
else:
	mensagem = "Troco de Y"
	print(mensagem(round(y, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(mensagem(round(x, 2)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:56:39) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta "
	print(mensagem(round(x, 2)))
else:
	mensagem = "Troco de "
	print(mensagem(round(y, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(mensagem(round(x, 2)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:56:41) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta "
	print(mensagem(round(x, 2)))
else:
	mensagem = "Troco de "
	print(mensagem(round(y, 2)))
-- EXECUTION TIME:
0.2185
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print(mensagem(round(x, 2)))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:57:26) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta "
	print(mensagem, (round(x, 2)))
else:
	mensagem = "Troco de "
	print(mensagem, (round(y, 2)))
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:57:30) 
-- CODE:
preco = float(input("preco: "))
pag = float(input("pag: "))
x = float(preco - pag)
y = float(pag - preco)

if(preco > pag):
	mensagem = "Falta "
	print(mensagem, (round(x, 2)))
else:
	mensagem = "Troco de "
	print(mensagem, (round(y, 2)))
-- EXECUTION TIME:
0.197553
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
